--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Gothic&family=Yusei+Magic&display=swap');
+
 body {
-    font-family: Roboto, system-ui, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Sawarabi Gothic", Roboto, system-ui, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
+    background-color: #8EF9F3;
 }
 
 .hero {
-    background-color: #1F2937;
+    background-color: #171738;
     padding: 0px 200px 150px 200px;
     overflow: hidden;
 }
@@ -20,7 +23,7 @@ body {
 }
 
 .logo {
-    color: #F9FAF8;
+    color: #8EF9F3;
     font-size: 24px;
     font-weight: 900;
 }
@@ -36,13 +39,13 @@ a {
 }
 
 .text {
-    color: #E5E7EB;
+    color: #FFD9CE;
     font-size: 18px;
     margin: 0;
 }
 
 h1 {
-    color: #F9FAF8;
+    color: #8EF9F3;
     font-size: 48px;
     margin: 0;
     margin-bottom: 4px;
@@ -60,19 +63,22 @@ h1 {
 }
 
 .hero-img {
-    background-color: #6e747d;
+    background-color: #593C8F;
+    background-image: url("https://images.unsplash.com/photo-1545569341-9eb8b30979d9?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     flex: auto;
+    min-width: 200px;
     max-width: 525px;
     padding: 0px 50px;
 }
 
 .button {
-    background-color: #3882F6;
+    background-color: #DB5461;
     border: none;
-    color: #F9FAF8;
+    color: #8EF9F3;
     padding: 8px 32px;
     border-radius: 10px;
     font-size: 18px;
@@ -90,7 +96,7 @@ h1 {
 h2 {
     font-size: 32px;
     font-weight: 900;
-    color: #1F2937;
+    color: #171738;
     margin: 48px 0;
 }
 
@@ -109,22 +115,22 @@ h2 {
 .info img {
     height: 165px;
     width: 165px;
-    border: 4px solid #3882F6;
+    border: 4px solid #DB5461;
     border-radius: 10px;
 }
 
 .info .text {
-    color: #6e747d
+    color: #593C8F
 }
 
 .section-quote {
-    background-color: #E5E7EB;
+    background-color: #FFD9CE;
     padding: 100px 0;
-    color: #1F2937;
+    color: #171738;
 }
 
 .container-quote {
-    max-width: 800px;
+    max-width: 900px;
     margin: auto;
     padding: 0px 50px;
 }
@@ -151,7 +157,7 @@ h2 {
 }
 
 .container-signup {
-    background-color: #3882F6;
+    background-color: #DB5461;
     padding: 50px 125px;
     border-radius: 10px;
     display: flex;
@@ -166,21 +172,21 @@ h2 {
 .text-signup strong {
     display: block;
     font-size: 24px;
-    color: #F9FAF8;
+    color: #8EF9F3;
     margin-bottom: 4px;
 }
 
 .button-signup {
-    border: 2px solid #F9FAF8;
+    border: 2px solid #8EF9F3;
     margin: 0;
 }
 
 footer {
-    background-color: #1F2937;
+    background-color: #171738;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 25px;
-    color: #F9FAF8;
+    color: #8EF9F3;
     font-size: 18px;
 }
